--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,19 @@
 {deps, [
     {cowboy, {git, "git://github.com/ninenines/cowboy.git", {tag, "2.0.0-pre.7"}}}
 ]}.
+
+{relx, [{release, {erlVuejs, "0.1.0"},
+         [erlVuejs]},
+
+        {dev_mode, true},
+        {include_erts, false},
+
+        {extended_start_script, true}
+       ]
+}.
+
+{profiles, [
+           {prod, [{relx, [{dev_mode, false},
+                           {include_erts, true}]}]}
+           ]
+}.
