--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {cowboy, {git, "git://github.com/ninenines/cowboy.git", {tag, "2.0.0-pre.7"}}}
+    {cowboy, {git, "git://github.com/ninenines/cowboy.git", {branch, "master"}}}
 ]}.
 
 {relx, [{release, {erlVuejs, "0.1.0"},
